--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html style="background: url('https://kckarnige.github.io/res/mc_back.png');">
 <head>
+<meta http-equiv="refresh" content="4;URL='https://github.com/kckarnige/mc_rerender/releases'" />
 <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
