--- a/index.html
+++ b/index.html
@@ -1,7 +1,27 @@
-<html style="background: url('https://kckarnige.github.io/res/mc_back.png');">
+<html>
 <head>
+<title>Minecraft Rerendered</title>
 <meta http-equiv="refresh" content="4;URL='https://github.com/kckarnige/mc_rerender/releases'" />
-<link rel="stylesheet" href="/css/main.css">
+<style>
+/* -Main CSS- */
+html {
+  background: url('https://kckarnige.github.io/res/mc_back.png');
+  color: #ffffff;
+  font-family: Arial, Helvetica, sans-serif;
+  overflow-y: overlay;
+  margin: 0;
+  user-select: none;
+}
+  
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  width: 50%;
+  margin: 0 auto;
+}
+</style>
 </head>
 <body>
 <br>
