--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 /* -Main CSS- */
 html {
   background: url('https://kckarnige.github.io/res/mc_back.png');
+  background-repeat: no-repeat;
+  background-size: cover;
   color: #ffffff;
   font-family: Arial, Helvetica, sans-serif;
   overflow-y: overlay;
