--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <style>
 /* -Main CSS- */
 html {
-  background: url('https://kckarnige.github.io/res/mc_back.png');
+  background: url('https://kckarnige.is-a.dev/res/mc_back.png');
   background-repeat: no-repeat;
   background-size: cover;
   color: #ffffff;
