--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@ html {
 <center><a style="font-family: Arial; color: white;">Placing each block, one by one...</a></center>
 <br>
 <br>
-<img style="width: 35%;" class="center" src="https://kckarnige.github.io/res/mc_fore.png">
+<img style="width: 35%;" class="center" src="https://kckarnige.is-a.dev/res/mc_fore.png">
 </body>
 </html>
